--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -72,4 +72,10 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
 
+    <!--solving Cross Site Scripting - XSS problem-->
+    <context-param>
+        <param-name>defaultHtmlEscape</param-name>
+        <param-value>true</param-value>
+    </context-param>
+
 </web-app>
